Changelog
=========

Here you can see the full list of changes between each Flask-Restless release.

.. note::

   As of version 0.6, Flask-Restless supports both pure SQLAlchemy and
   Flask-SQLAlchemy models. Before that, it supported only Elixir models.

Version 0.9.0-dev
-----------------

Not yet released.

- Fixed `issue #108 <https://github.com/jfinkels/flask-restless/issues/108>`_:
  dynamically loaded relationships should now be rendered correctly by the
  :func:`views._to_dict` function regardless of whether they are a list or a
  single object.

Version 0.8.0
-------------

Released on November 19, 2012.

- Fixed `issue #104 <https://github.com/jfinkels/flask-restless/issues/104>`_:
  added ``num_results`` key to paginated JSON responses.
- Fixed `issue #94 <https://github.com/jfinkels/flask-restless/issues/94>`_:
  :func:`views._to_dict` should return a single object instead of a list when
  resolving dynamically loaded many-to-one relationships.

Version 0.7.0
-------------

Released on October 9, 2012.

- Fixed `issue #86 <https://github.com/jfinkels/flask-restless/issues/86>`_:
  allow specifying include and exclude for related models.
- Added ``exclude_columns`` keyword argument to :meth:`APIManager.create_api`.
- Fixed `issue #101 <https://github.com/jfinkels/flask-restless/issues/101>`_:
  ``exclude`` in :func:`views._to_dict` function now correctly excludes
  requested fields from the returned dictionary.
- Added working ``include`` and ``exclude`` functionality to the
  :func:`views._to_dict` function.
- Fixed `issue #98 <https://github.com/jfinkels/flask-restless/issues/98>`_:
  :http:method:`get` requests to the function evaluation endpoint should not
  have a data payload.
- Added a ``total_pages`` mapping to the JSON response according to
  `pull request #93
  <https://github.com/jfinkels/flask-restless/pull/93>`_.
- Fixed `issue #91 <https://github.com/jfinkels/flask-restless/issues/91>`_: