@@ -13,6 +13,10 @@ Version 0.9.0-dev
 
 Not yet released.
 
+- Fixed `issue #107 <https://github.com/jfinkels/flask-restless/issues/107>`_:
+  server responds with an error code when a :http:method:`patch` or
+  :http:method:`post` request specifies a field which does not exist on the
+  model.
 - Fixed `issue #108 <https://github.com/jfinkels/flask-restless/issues/108>`_:
   dynamically loaded relationships should now be rendered correctly by the
   :func:`views._to_dict` function regardless of whether they are a list or a
